--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="num" id="2">2</button>
                 <button class="num" id="3">3</button>
                 <button class="op" id="add">+</button>
-                <button class="num" id="0">0</button>
+                <button id="0">0</button>
                 <button id="decimal">.</button>
                 <button id="equal">=</button>
             </div>
