Fixed color bug

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <div id=calculator>
             <input type='text' value='0' maxlength="25">
             <div id="buttons">
-                <button id="clear">AC</button>
-                <button id="plusOrMinus">+/-</button>
-                <button id="backspace">«</button>
+                <button id="clear" class="light">AC</button>
+                <button id="plusOrMinus" class="light">+/-</button>
+                <button id="backspace" class="light">«</button>
                 <button class="op orange" id="divide">÷</button>
                 <button class="num gray" id="7">7</button>
                 <button class="num gray" id="8">8</button>
